# sophy4lite

./:  .gitignore  .gitignore  CLAUDE.md  README.md  analyze_trades.py  config.py  dax_orb_tt.py  fix_orb_exec.py  main.py  pyproject.toml  quick_smoke_opening_breakout.py  requirements.txt  test_signals.py  validate_framework.py  whisper.py
.claude/: settings.local.json
REPOMIX/: repomix-output-bastiaandehaan-sophy4lite (1).md
backtest/: __init__.py  backtest.py  breakout_exec.py  data_loader.py  mtf_exec.py  mtf_exec_fast.py  orb_exec.py  runner.py  runner_vbt.py
cli/: main.py
docs/: architecture.md  implementation-log.md  standards.md
docs/arch/: ENGINE_OVERVIEW.md
ftmo_compliance/: ftmo_check.py
live/: live_confluence.py  live_trading.py  mt5_feed.py
monitor/: monitor.py
optimizer/: optimizer.py
risk/: ftmo.py  ftmo_guard.py  risk_management.py
scripts/: diagnostics.py  export_mt5_data.py  export_mt5_m1.py  export_mt5_minutes.py  export_mt5_orb.py  plot_orb_days.py  run_backtest_demo.py  specs.py
sophy4lite-snapshot/: .gitignore  README.md  requirements.txt  validate_framework.py
sophy4lite-snapshot/backtest/: breakout_exec.py  orb_exec.py  runner.py  runner_vbt.py
sophy4lite-snapshot/scripts/: diagnostics.py  export_mt5_data.py
sophy4lite-snapshot/strategies/: __init__.py  order_block.py  premarket_orb.py
sophy4lite-snapshot/test/: test_metrics.py
sophy4lite-snapshot/utils/: data_health.py  metrics.py  plot.py  position.py
strategies/: __init__.py  base_strategy.py  bollong.py  breakout_params.py  breakout_signals.py  mtf_confluence.py  order_block.py  simple_order_block.py
templates/: strategy_template.py  test_template.py
test/: test_critical_look_ahead.py  test_metrics.py  test_mtf_confluence.py
utils/: data_health.py  days.py  logging_setup.py  metrics.py  plot.py  position.py  run_backtest_demo.py  specs.py  structs.py
