[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sophy4lite"
version = "0.1.0"
description = "Lite trading bot with OB strategy, optimizer and FTMO guardrails"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "typer>=0.12",
  "pydantic>=2.8",
  "rich>=13.7",
]

# optioneel: een console-commando 'sophy'
[project.scripts]
sophy = "cli.main:app"

# >>> HIER GEEF JE AAN WELKE PACKAGES JE WILT INSTALLEREN <<<
[tool.setuptools]
packages = { find = { include = [
  "cli", "optimizer", "backtest", "strategies", "utils", "risk",
], exclude = [
  "tests*", "data*", "output*", "profiles*", "monitor*", "live*", "ftmo_compliance*",
]}}
