[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophy4lite"
version = "0.1.0"
description = "Lean trading research framework with ATR breakout backtesting + FTMO guards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Bastiaan de Haan"}]

dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
live = ["MetaTrader5>=5.0.45; platform_system == 'Windows'"]
dev  = ["pytest>=8.0", "pytest-cov>=4.1", "black>=24.4", "flake8>=7.0"]

[tool.setuptools]
packages = ["backtest", "cli", "risk", "strategies", "utils"]

[tool.setuptools.package-data]
# Bijvoorbeeld: templates of statische assets
"cli" = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
